--- a/agenda-auto-pwa/package.json
+++ b/agenda-auto-pwa/package.json
@@ -26,6 +26,7 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "@ngneat/transloco": "^4.0.0",
     "firebase": "^9.6.8",
     "luxon": "^2.3.1",
     "rxjs": "~6.6.0",
