--- a/agenda-auto-pwa/package.json
+++ b/agenda-auto-pwa/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^6.0.0",
     "@ngneat/transloco": "^4.0.0",
     "firebase": "^9.6.8",
+    "ics": "^2.35.0",
     "luxon": "^2.3.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -49,7 +50,7 @@
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.48",
     "@typescript-eslint/eslint-plugin": "5.11.0",
     "@typescript-eslint/parser": "5.11.0",
     "eslint": "^7.32.0",
