--- a/agenda-auto-pwa/package.json
+++ b/agenda-auto-pwa/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^13.3.3",
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/fire": "^7.2.1",
